--- a/week1/public/style.css
+++ b/week1/public/style.css
@@ -68,10 +68,11 @@ body{
 .small-boxes {
     display: grid;
     width: 1200px;
-    grid-template-columns: repeat(3 , calc(33.33% - 20px));
     margin: auto;
+    grid-template-columns: repeat(3 , calc(33.33% - 20px));
     gap: 20px;
     margin-bottom: 20px;
+    justify-content: center;
 }
 
 .small-boxes > div {
@@ -91,13 +92,14 @@ body{
 .big-boxes {
     display: grid;
     width: 1200px;
-    grid-template-columns: calc(33.33% - 20px) calc(66.67% / 4 - 20px) calc(66.67% / 4 - 20px) calc(66.67% / 4 - 20px) calc(66.67% / 4 - 20px);
+    grid-template-columns: calc(33.33% - 20px) repeat(4 , calc(66.67% / 4 - 20px));
     gap: 20px;
     margin: auto;
-    
+    justify-content: center;
 }
 
 .big-boxes > div{
+    border: 1px solid #000;
     background-image: url("img1.png");
     background-size: cover;
     background-position: center;
@@ -120,7 +122,7 @@ body{
     height: 20px;
     width: 20px;
     position:relative;
-    top:-20px;
+    top:-33px;
     left: calc(100% - 20px);
     opacity: 0.8;
 }
@@ -129,7 +131,7 @@ body{
     .small-boxes {
         display: grid;
         width: 90%;
-        grid-template-columns: repeat(2 , calc(50% - 10px));
+        grid-template-columns: 1fr 1fr;
         margin: auto;
         gap: 20px;
         flex-wrap: wrap;
@@ -144,7 +146,7 @@ body{
     .big-boxes {
         display: grid;
         width: 90%;
-        grid-template-columns: repeat(4 , calc(25% - 15px));
+        grid-template-columns: repeat(4 , 1fr);
         gap: 20px;
         height: 100%;
         margin: auto;
@@ -163,17 +165,11 @@ body{
 @media screen and (min-width: 360px) and (max-width:600px){
     .welecome{
         display: flex;
-        flex:1;
-        justify-content: center;
-        align-items: center;
         height: 250px;
         font-size: 2rem;
         background-color: #8cdef5;
         margin-bottom: 20px;
         width: 100%;
-        text-align: center;
-        flex-wrap: nowrap;
-        white-space: nowrap;
     }
 
     .menu-container {
@@ -199,7 +195,7 @@ body{
     .small-boxes {
         display: grid;
         width: 90%;
-        grid-template-columns: 100%;
+        grid-template-columns: 1fr;
         margin: auto;
         gap: 20px;
         flex-wrap: wrap;
@@ -210,7 +206,7 @@ body{
     .big-boxes {
         display: grid;
         width: 90%;
-        grid-template-columns: 100%;
+        grid-template-columns: 1fr;
         gap: 20px;
         height: 100%;
         flex-wrap: wrap;
