--- a/week3/public/style.css
+++ b/week3/public/style.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     padding: 0;
     font-size: 20px;
+    
 }
 
 .header{
@@ -100,7 +101,7 @@ body{
 
 .big-boxes > div{
     border: 1px solid #000;
-    background-image: url("img1.png");
+    background-image: " ";
     background-size: cover;
     background-position: center;
     height: 180px;
