Modify task four & /error route.

--- a/week4/templates/square.html
+++ b/week4/templates/square.html
@@ -10,7 +10,7 @@
 	<div class = "num">
 		{{num}}
 	</div>
-	<a href="signout" class="signout">
+	<a href="/signout" class="signout">
 			<button>回到首頁</button>
 	</a>
 </body>
