--- a/week4/templates/member_page.html
+++ b/week4/templates/member_page.html
@@ -11,7 +11,7 @@
 	<div class = "num">
 		{{msg}}
 	</div>
-	<a href="/signout" class="signout">
+		<a href="/signout" class="signout" method="GET">
 		登出系統
 	</a>
 </body>
